# touchswitch

./: README.md  meson.build
metadata/: meson.build  touchswitch.xml
src/: INIReader.h  meson.build  touchswitch-icon-overlay.cpp  touchswitch-icon-overlay.hpp  touchswitch-title-overlay.cpp  touchswitch-title-overlay.hpp  touchswitch.cpp  touchswitch.hpp
src/wayfire/plugins/: touchswitch-signal.hpp
